# caromimo.ca

./: .gitignore  README.md  add_recipes.py  pyproject.toml  recipes.yaml  requirements.txt  template.yaml  vercel.json
app/: main.py  queries.sql
app/static/: styles.css
app/templates/: 404.html  base.html  base_fr.html  index.html  index_fr.html  recette.html  recipe.html
migrations/: 000001_create_tables.down.sql  000001_create_tables.up.sql  000002_add_recipes.down.sql  000002_add_recipes.up.sql
