[project]
name = "caromimo.ca"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pg8000>=1.31.2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
_.env_file = ".env"
create = { shell = "docker run -d -e POSTGRES_USER=$DATABASE_USER -e POSTGRES_PASSWORD=$DATABASE_PASSWORD --network=host postgres:16.6" }
connect = { shell = "psql --host=localhost --username=$DATABASE_USER --dbname=$DATABASE --password" }
destroy = { shell = "docker stop $(docker ps -q)" }
migration = "migrate create -ext sql -dir migrations -seq"
migrateup = { shell = "migrate -database $DATABASE_URL -path migrations up" }
migratedown = { shell = "migrate -database $DATABASE_URL -path migrations down 1" }
server = "uvicorn app.main:app --reload"
