[project]
name = "caromimo.ca"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pg8000>=1.31.2",
    "jinja2>=3.1.5",
    "PyYAML>=6.0.2",
    "aiosql>=13.0",
    "python-slugify>=8.0.4",
    "psycopg2-binary>=2.9.10",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
_.env_file = ".env"
create = { shell = "docker run -d -e POSTGRES_USER=$DATABASE_USER -e POSTGRES_PASSWORD=$DATABASE_PASSWORD --network=host postgres:16.6" }
connect = { shell = "psql --host=localhost --username=$DATABASE_USER --dbname=$DATABASE --password" }
destroy = { shell = "docker stop $(docker ps -q)" }
migration = "migrate create -ext sql -dir migrations -seq"
migrateup = { shell = "migrate -database $DATABASE_URL -path migrations up" }
migrate_neon = {shell = "migrate -database $DATABASE_URL -path migrations up", env_file.override = ".env.prod"}
migratedown = { shell = "migrate -database $DATABASE_URL -path migrations down 1" }
server = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
load_recipes = "add_recipes.py"
load_recipes_neon = {cmd = "add_recipes.py", env_file.override = ".env.prod"}
repl = "python"
requirements = { shell = "pdm export -o requirements.txt --no-hashes"}